--- a/module-04/css/styles.css
+++ b/module-04/css/styles.css
@@ -1,81 +1,80 @@
 /*html*/
 html{box-sizing: border-box;}
+
 *, *::before, *::after {box-sizing: inherit;}
+
 
 /*body*/
 body {
     font-family: "Open Sans", "Roboto", sans-serif;
     color: #626262;
     font-size: 14px;
-    line-height: 24px;}
+    line-height: 1.5;
+}
 
 img {
     display: block;
     max-width: 100%;
-    height: auto;}
+    height: auto;
+}
+
+a {text-decoration: none;}
 
 .clearfix::after {
     display: table;
     content: '';
-    clear: both;}
+    clear: both;
+}
 
 .container {
     width: 1170px;
     margin: 0 auto;
-    line-height: 0px;}
+    line-height: 1;
+}
+
 
 /*header*/
 .block-header {
-    margin-top: 38px;
-    margin-bottom: 98px;}
+    padding-top: 38px;
+    margin-bottom: 98px;
+}
+
 
 /*logo*/
 .logo {
-    display: inline-block;
-    font-family: "Roboto";
-    font-weight: 300;
-    text-transform: uppercase;
-    text-decoration: none;
+    float: left;
     margin-left: 30px;
-    font-size: 30px;
-    line-height: 32px;}
+    margin-top: 7px;
+}
 
-.logo::first-letter {
-    font-weight: 900;
-    color: rgb(26, 188, 156);}
 
 /*navigation*/
 .menu {
     float: right;
-    width: 466px;
     font-size: 14px;
     list-style: none;
     margin-top: 11px;
     margin-right: 30px;
-    padding: 0px;}
-
-.menu li {float: left;}
-
-.menu li:not(:last-child){margin-right: 30px;}
-
-.menu a {
-    display: block;
-    color: rgb(15, 1, 1);
-    font-family: "Open Sans";
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height: 11px;
+    padding: 0px;
 }
 
-/*.site-navigation a:first-child {color: rgb(26, 188, 156);}*/
+.menu-li {float: left;}
 
-.menu a:hover {color: #e84545;}
-.menu a:focus {color: #e84545;}
+.menu-li:not(:last-child){margin-right: 30px;}
 
-.menu span {color: #03a9f4;}
-.menu span:hover {color: #e84545;}
-.menu span:focus {color: #e84545;}
+.menu-a {
+    display: block;
+    color: rgb(15, 1, 1);
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 11px;
+}
+      
+
+.menu a:hover {color: #03a9f4;}
+.menu a:focus {color: #03a9f4;}
+
 
 /*main products*/
 .products {
@@ -92,6 +91,7 @@ h2 {
     text-align: center;
     margin: 0px;
     padding: 0px;
+    overflow-wrap: break-word;
 }
 
 h2::after {
@@ -124,59 +124,56 @@ h3::after {
     font-size: 0;
 }
 
-.products-list li {
+.products-item {
     float: left;
     width: 255px;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
-.products-list li:nth-child(6n) .products-list-name {background-color:rgb(26, 188, 156);}
-.products-list li:nth-child(6n) .products-list-price {background-color:rgb(127, 217, 199);}
+.products-list-img-wrp {
+    overflow: hidden;
+    height: 282px;
+    line-height: 282px;
+    text-align: center;
+}
 
 .products-list li:first-child{margin-left: 30px;}
 .products-list li:nth-child(5n){margin-left: 30px;}
 .products-list li:nth-last-child(-n+4) {margin-bottom: 0;}
 
-.products-list li:hover .products-list-name {background-color: rgb(11, 85, 27);}
-.products-list li:hover .products-list-price {background-color: rgb(11, 85, 27);}
-
 .products-list-img {
-    margin-left: 0px;
-    margin-bottom: 0px;}
+    vertical-align: middle;
+    max-width: 255px;
+}
+
+.products-list-text-wrp {
+    height: calc(322px - 282px);
+    line-height: calc(322px - 282px);
+    background: rgb(50, 50, 50);
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+}
 
 .products-list-name {
-    float: left;
-    width: 201px;
-    height: 40px;
-    line-height: 17px;
-    font-weight: normal;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: "Roboto";
-    background-color: rgb(50, 50, 50);
-    color: rgb(255, 255, 255);
-    text-align: left;
-    padding-top: 14px;
     padding-left: 14px;
-    margin: 0 auto;
+    margin: 0px;
+    text-align: left;
+    overflow: hidden;
 }
 
 .products-list-price {
     float: right;
-    font-size: 18px;
-    line-height: 17px;
-    font-family: "Roboto";
-    width: 54px;
-    height: 40px;
-    background-color: rgb(140, 140, 140);
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 14px;
+    background: rgb(140, 140, 140);
+    padding: 0 12px;
     margin: 0px;
+    overflow: hidden;
 }
 
+.products-item:hover .products-list-text-wrp {background-color: rgb(26, 188, 156);}
+.products-item:hover .products-list-price {background-color: rgb(26, 188, 156);}
 
 /*main news*/
 .news {
@@ -186,15 +183,18 @@ h3::after {
     font-size: 0;
 }
 
-.news li{
+.news-li{
     float: left;
     width: 350px;
     margin-right: 30px;
 }
 
-.news li:first-child{margin-left: 30px;}
+.news-li:first-child{margin-left: 30px;}
 
-.news-img {margin-bottom: 14px;}
+.news-img {
+    margin-bottom: 14px;
+    max-width: 347px;
+}
 
 .news-about {
     font-size: 18px;
@@ -204,6 +204,7 @@ h3::after {
     line-height: 26px;
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 }
 
 .news-text {
@@ -215,13 +216,14 @@ h3::after {
     font-weight: 400;
     color: rgb(85, 82, 82);
     line-height: 20px;
+    overflow: hidden;
 }
 
 .read {
     display: block;
     border-radius: 3px;
     background-color: rgb(78, 198, 171);
-    width: 159px;
+    padding: 0 44px;
     height: 51px;
     margin-right: auto;
     margin-bottom: 0px;
@@ -232,10 +234,6 @@ h3::after {
     line-height: 24px;
     cursor: pointer;
 }
-
-
-
-  
 
 
 
