--- a/module-04/css/styles.css
+++ b/module-04/css/styles.css
@@ -153,6 +153,7 @@ h3::after {
     background: rgb(50, 50, 50);
     color: rgb(255, 255, 255);
     font-size: 18px;
+    font-weight: 700;
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
 }
@@ -228,7 +229,8 @@ h3::after {
     margin-right: auto;
     margin-bottom: 0px;
     font-size: 12px;
-    font-family: "Open Sans";
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
     color: rgb(255, 255, 255);
     text-align: center;
     line-height: 24px;
