--- a/module-05/css/styles.css
+++ b/module-05/css/styles.css
@@ -341,6 +341,8 @@ h3::after {
     background-position: 12px 11px;
     text-align: right;
     padding-right: 17px;
+    padding-left: 50px;
+    overflow: hidden;
 }
 
 .products-list-button4:hover {
