--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -1,5 +1,6 @@
 /*html*/
 html{box-sizing: border-box;}
+
 *, *::before, *::after {box-sizing: inherit;}
 
 /*body*/
@@ -17,16 +18,6 @@ img {
 }
 
 a {text-decoration: none;}
-
-p {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-}
-
-h3 {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-}
 
 .container {
     width: 900px;
@@ -101,7 +92,7 @@ h3 {
     font-weight: normal;
     text-transform: uppercase;
     font-family: "Ubuntu", sans-serif;
-    margin-bottom: 32px;
+    margin: 0 0 32px 0;
     overflow: hidden;
 }
 
@@ -110,7 +101,7 @@ h3 {
     line-height: 1.2;
     font-family: "Playfair Display", sans-serif;
     font-weight: normal;
-    margin-bottom: 36px;
+    margin: 0 0 36px 0;
     overflow: hidden;
 }
 
@@ -120,7 +111,7 @@ h3 {
     font-family: "Playfair Display", sans-serif;
     vertical-align: top;
     overflow: hidden;
-    margin-block-end: 0em;
+    margin: 0;
 }
 
 
@@ -128,6 +119,8 @@ h3 {
 .block-footer {text-align: center;}
 
 .load {
+    height: 60px;
+    max-width: 900px;
     border-width: 1px;
     border-color: rgb(98, 98, 98);
     border-style: solid;
@@ -135,21 +128,14 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 70px;
-    padding: 22px 34px;
+    padding: 0 34px;
     font-size: 12px;
     font-weight: 400;
     font-family: "Playfair Display", sans-serif;
     color: rgb(98, 98, 98);
     line-height: 2;
-    cursor: pointer;}
-
-
-
-  
-
-
-
-
-
-
+    text-align: center;
+    cursor: pointer;
+    overflow: hidden;
+}
 
