--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -25,9 +25,9 @@ a {text-decoration: none;}
 }
 
 /*header*/
-.block-header {
+.menu {
     padding-top: 76px;
-    margin-bottom: 104px;
+    padding-bottom: 1px;
 }
 
 /*navigation*/
@@ -35,17 +35,17 @@ a {text-decoration: none;}
     list-style: none;
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin: 0 0 104px 0;
 }
 
 .site-navigation-li {
     display: inline-block;
     text-align: center;
-    margin: 0 51px;
+    margin-right: 51px;
 }
 
-.site-navigation li:last-child {margin-right: 0px;}
-.site-navigation li:first-child {margin-left: 0px;}
+.site-navigation-li:last-child {margin-right: 0px;}
+/* .site-navigation li:first-child {margin-left: 0px;} */
 
 .site-navigation-a {
     font-family: "Playfair Display", sans-serif;
@@ -56,13 +56,13 @@ a {text-decoration: none;}
     line-height: 1.7;
 }
 
-.site-navigation a:hover {color: #03a9f4;}
-.site-navigation a:focus {color: #03a9f4;}
+.site-navigation-a:hover {color: #03a9f4;}
+.site-navigation-a:focus {color: #03a9f4;}
 
 
 /*main*/
 .card {
-    margin-bottom: 56px;
+    padding-bottom: 1px;
     text-align: center;
 }
 
@@ -71,6 +71,7 @@ a {text-decoration: none;}
     margin: 0;
     padding: 0;
     font-size: 0;
+    margin-bottom: 55px;
 }
 
 .card-list li:nth-child(2n) {margin-right: 0;}
@@ -116,7 +117,7 @@ a {text-decoration: none;}
 
 
 /*footer*/
-.block-footer {text-align: center;}
+.footer {text-align: center;}
 
 .load {
     height: 60px;
