--- a/module-08/css/styles.css
+++ b/module-08/css/styles.css
@@ -164,7 +164,12 @@ a {text-decoration: none;}
     text-align: center;
 }
 
-.partner-li {margin-bottom: 28px;}
+.partner-li {
+    margin-bottom: 28px;
+    cursor: pointer;
+}
+
+.partner-li:hover .partner-img {transform: scale(1.1);}
 
 .partner-li:last-child {margin-bottom: 0;}
 
